--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,7 @@ services:
     build: .
     ports:
       - "5000:5000"
-    volumes:
-      - .:/app
+    # volumes:
+    #   - .:/app
     environment:
       FLASK_ENV: development
-      # FLASK_APP: app.py
