--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,5 @@ services:
       - "5000:5000"
     # volumes:
     #   - .:/app
-    environment:
-      FLASK_ENV: development
+    env_file:
+      - stack.env
